main.css
* {
    margin: 0;
    padding: 0;
}
.container {
    width:100%;
    height:100vh;
}
body {
	margin: 0;
	background-color: rgb(255, 255, 255);
	color: #000;
	overflow: hidden;
    font-size: .8em;
    font-family: 'Segma',sans-serif;
	line-height: 24px;
	overscroll-behavior: none;
}

a {
	color: #ff0;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

button {
	cursor: pointer;
	text-transform: uppercase;
}

a, button, input, select {
	pointer-events: auto;
}

.button {
	z-index:2;
	text-align: center;
	vertical-align: middle;
	background-color: #000;
	position: absolute;
	border: 1px solid #fff;
}

#openPackageButton {
	position: absolute;
	width: 230px;
	height: 50px;
	left: calc(50% - 115px);
	bottom: 5px;
	border: 2px solid #A7DFDE;
	border-radius: 5px;
	display: none;
}

#backButton {
	position: absolute;
	width: 125px;
	height: 50px;
	left: 10px;
	bottom: 5px;
	border: 2px solid #A7DFDE;
	box-sizing: border-box;
	filter: drop-shadow(0px 4px 26px rgba(0, 0, 0, 0.04));
	border-radius: 4px;
	background-color: #0000;
	display: none;
}

.blockInButton {
	position: absolute;
	left: 4.91px;
	right: 4.91px;
	top: 4.85px;
	bottom: 4.86px;
	background: #FFFFFF;
	box-shadow: 0px 4px 26px rgba(0, 0, 0, 0.04);
	border-radius: 4px;
}

#openPackageButton .blockInButton span {
	position: absolute;
	width: 170px;
	height: 40px;
	right: 5px;
	top: 5px;
	
	/*font-family: Segma;*/
	font-style: normal;
	font-weight: 600;
	font-size: 21px;
	line-height: 30px;
	text-align: center;
	color: #020828;
}

#openPackageButton .blockInButton img {
	position: absolute;
	left: 10px;
	height: 30px;
	top: 5px;
	/*bottom: 10px;
	/*border: 6px solid #A7DFDE;
	/*transform: rotate(-90deg);*/
}

#backButton .blockInButton span {
	position: absolute;
	/*left: 42.76%;*/
	right: 5px;
	top: 20.11%;
	bottom: 25.64%;
	/*font-family: Segma;*/
	font-style: normal;
	font-weight: 600;
	font-size: 21px;
	line-height: 25px;
	text-align: center;
	color: #020828;
}

#backButton .blockInButton img {
	position: absolute;
	left: 10px;
	height: 20px;
	top: 10px;
	/*border: 6px solid #A7DFDE;
	/*transform: rotate(-90deg);*/
}

#prepareButton {
	position: absolute;
	width: 130px;
	height: 50px;
	left: calc(50% - 65px);
	bottom: 5px;
	border: 2px solid #A7DFDE;
	box-sizing: border-box;
	filter: drop-shadow(0px 4px 26px rgba(0, 0, 0, 0.04));
	border-radius: 4px;
	background-color: #0000;
	display: none;
}

#prepareButton .blockInButton span {
	position: absolute;
	/*left: 42.76%;*/
	right: 5px;
	top: 20.11%;
	bottom: 25.64%;
	/*font-family: Segma;*/
	font-style: normal;
	font-weight: 600;
	font-size: 21px;
	line-height: 25px;
	text-align: center;
	color: #020828;
}

#prepareButton .blockInButton img {
	position: absolute;
	left: 10px;
	height: 20px;
	top: 10px;
	/*border: 6px solid #A7DFDE;
	/*transform: rotate(-90deg);*/
}

.annotationLabel {
	color: #ffffff;
	font-family: monospace;
	pointer-events: none;
	font-size: 17px;
}

#loaderPage
{
	position: absolute;
	background-color: #FFFFFF;
	width:100%;
	height:100%;
	display: block;
}

#loaderPage span {
	position: absolute;
	top: calc(50% + 30px);
	font-size: 21px;
	width: 200px;
	left: calc(50% - 90px);
	text-align: center;
}

#loaderPage img {
	position: inherit;
	bottom: calc(50% + 30px);
	width: 400px;
	left: calc(50% - 200px);
}

#progressBar {
	position: absolute;
	background-color: #EEEEEE;
	top: 50%;
	width: 100%;
	height: 15px;
}
#progress {
	width: 1%;
	height: 100%;
	background-color: #A7DFDE;
}

.post_info {
	position: absolute;
	opacity: 1;
	width: 400px;
	top: 20px;
	left: 20px;
	display: none;
}
.post_info img {
	width: 300px;
	top: 50px;
	left: 0%;
}
.post_info span {
	color: #FFFFFF;
	font-size: 40px;
}

